--- a/Example/ToastCollectionViewCell/Base.lproj/Main.storyboard
+++ b/Example/ToastCollectionViewCell/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ExampleCell" id="wRN-do-VLQ" customClass="ToastCollectionViewCell" customModule="Pods_ToastCollectionViewCell_Example">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ExampleCell" id="wRN-do-VLQ" customClass="ExampleCell" customModule="ToastCollectionViewCell_Example" customModuleProvider="target">
                                         <rect key="frame" x="6" y="0.0" width="363" height="334"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -51,6 +51,9 @@
                             <constraint firstItem="gwz-sN-IJr" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="UHl-3P-LKE"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="gwz-sN-IJr" id="pJI-ZE-wZn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
